--- a/app/views/dashboards/overviews.html
+++ b/app/views/dashboards/overviews.html
@@ -8,12 +8,20 @@
     <!-- end report title -->
     <!-- start report actions -->
     <ul class="nav navbar-nav pull-right">
-      <!-- TODO implement downloads -->
+      <!-- start filter -->
       <li class="nav-item">
         <a ng-click="showFilter()" class="nav-link" aria-expanded="false" title="Click to Filter Report">      
             <i class="ion-android-funnel w-24" title="Click To Filter Reports"></i>
         </a>
       </li>
+      <!-- end filter -->
+      <!-- start download -->
+      <li class="nav-item" ng-if="overviews && overviews.length > 0">
+        <a title="Click To Export Reports" class="nav-link" ng-csv="export" csv-header="exports.headers" filename="exports.filename">
+                <i class="icon-cloud-download w-24" title="Click To Export Reports"></i>
+            </a>
+      </li>
+      <!-- end download -->
     </ul>
     <!-- end report actions -->
   </div>
@@ -22,173 +30,86 @@
 <!-- start overview body -->
 <div class="app-body">
   <div class="app-body-inner">
-    <div class="row-col">
-      <div class="col-lg b-r">
-        <!-- start issues summary -->
-        <div class="row no-gutter">
-          <div class="col-xs-6 col-sm-3 b-r b-b">
-            <div class="padding">
-              <div>
-                <span class="pull-right">
-                                <i class="fa fa-caret-up text-primary m-y-xs"></i>
-                            </span>
-                <span class="text-muted l-h-1x">
-                                <i class="ion-ios-grid-view text-muted"></i>
-                            </span>
+    <div class="padding">
+      <!-- start issues summary -->
+      <!-- TODO restore issue summary -->
+      <!-- end issues summary -->
+      <!-- start service group count summary -->
+      <div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="box">
+              <div class="box-header">
+                <h3>Issue per Service Group</h3>
+                <small class="block text-muted">
+                               Count of Reported Issues by Their Service Group
+                              </small>
               </div>
-              <div class="text-center">
-                <h2 class="text-center _600">{{issues.total}}</h2>
-                <p class="text-muted m-b-md">Reported Issues</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-sm-3 b-r b-b">
-            <div class="padding">
-              <div>
-                <span class="pull-right">
-                            <i class="fa fa-caret-up text-primary m-y-xs"></i>
-                            </span>
-                <span class="text-muted l-h-1x">
-                            <i class="ion-document text-muted"></i>
-                            </span>
-              </div>
-              <div class="text-center">
-                <h2 class="text-center _600">{{issues.resolved}}</h2>
-                <p class="text-muted m-b-md">Resolved Issues</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-sm-3 b-r b-b">
-            <div class="padding">
-              <div>
-                <span class="pull-right">
-                            <i class="fa fa-caret-down text-danger m-y-xs"></i>
-                            </span>
-                <span class="text-muted l-h-1x">
-                            <i class="ion-android-document text-muted"></i>
-                            </span>
-              </div>
-              <div class="text-center">
-                <h2 class="text-center _600">{{issues.unresolved}}</h2>
-                <p class="text-muted m-b-md">Un-Resolved Issues</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-sm-3 b-b">
-            <div class="padding">
-              <div>
-                <span class="pull-right">
-                                <i class="fa fa-caret-up text-primary m-y-xs"></i>
-                            </span>
-                <span class="text-muted l-h-1x">
-                            <i class="icon-call-in text-muted"></i>
-                            </span>
-              </div>
-              <div class="text-center">
-                <h2 class="text-center _600">
-                             <span title="Average Call Duration - Minutes Spent">
-                             {{issues.averageCallDuration.minutes}}<span class="text-muted text-xs">minutes</span>
-                             </span> 
-                             <span title="Average Call Duration - Seconds Spent">
-                              {{issues.averageCallDuration.seconds}}<span class="text-muted text-xs">seconds</span>
-                              </span>
-                            </h2>
-                <p class="text-muted m-b-md">Average Call Duration</p>
+              <div class="box-body p-l-none p-r-none">
+                <echart config="perGroupConfig" options="perGroupOptions"></echart>
               </div>
             </div>
           </div>
         </div>
-        <!-- end issues summary -->
-        <!-- start jurisdiction count summary -->
-        <div class="padding">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="box">
-                <div class="box-header">
-                  <h3>Issue per Area</h3>
-                  <small class="block text-muted">
-                                 Count of Reported Issues by Their Area
-                                </small>
-                </div>
-                <div class="box-body">
-                  <echart config="jurisdictionConfig" options="jurisdictionOptions"></echart>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end jurisdiction count summary -->
-        <!-- start service group count summary -->
-        <div class="padding">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="box">
-                <div class="box-header">
-                  <h3>Issue per Service Group</h3>
-                  <small class="block text-muted">
-                                 Count of Reported Issues by Their Service Group
-                                </small>
-                </div>
-                <div class="box-body">
-                  <pie-chart config="groupConfig" data="groupData" font-style="Lato"></pie-chart>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end service group count summary -->
-        <!-- start service count summary -->
-        <div class="padding">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="box">
-                <div class="box-header">
-                  <h3>Issue per Service</h3>
-                  <small class="block text-muted">
-                                Count of Reported Issues by Their Service
-                                </small>
-                </div>
-                <div class="box-body">
-                  <echart config="serviceConfig" options="serviceOptions"></echart>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end service count summary -->
-        <!-- start priority & status count summary -->
-        <div class="padding">
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="box">
-                <div class="box-header">
-                  <h3>Issue per Status</h3>
-                  <small class="block text-muted">
-                                 Count of Reported Issues by Their Status
-                                </small>
-                </div>
-                <div class="box-body">
-                  <pie-chart config="statusConfig" data="statusData"></pie-chart>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="box">
-                <div class="box-header">
-                  <h3>Issue per Priority</h3>
-                  <small class="block text-muted">
-                                Count of Reported Issues by Their Priorities
-                                </small>
-                </div>
-                <div class="box-body">
-                  <pie-chart config="priorityConfig" data="priorityData"></pie-chart>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end priority & status count summary -->
       </div>
+      <!-- end service group count summary -->
+      <!-- start per service summary -->
+      <div>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="box">
+              <div class="box-header">
+                <h3>Issue per Area per Service</h3>
+                <small class="block text-muted">
+                                 Count of Reported Issues by Their Service
+                                </small>
+              </div>
+              <div class="box-body p-l-none p-r-none">
+                <echart ng-repeat="options in perPerServiceOptions" config="perPerServiceConfig" options="options"></echart>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end per jurisdiction per service count standing -->
+      <!-- start status count summary -->
+      <div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="box">
+              <div class="box-header">
+                <h3>Issue per Status</h3>
+                <small class="block text-muted">
+                              Count of Reported Issues by Their Status
+                              </small>
+              </div>
+              <div class="box-body p-l-none p-r-none">
+                <echart config="perStatusConfig" options="perStatusOptions"></echart>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end status count summary -->
+      <!-- start status count summary -->
+      <div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="box">
+              <div class="box-header">
+                <h3>Issue per Priority</h3>
+                <small class="block text-muted">
+                              Count of Reported Issues by Their Priorities
+                              </small>
+              </div>
+              <div class="box-body p-l-none p-r-none">
+                <echart config="perPriorityConfig" options="perPriorityOptions"></echart>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end status count summary -->
     </div>
   </div>
 </div>
