--- a/app/views/auth/_partials/service_request_durations.html
+++ b/app/views/auth/_partials/service_request_durations.html
@@ -14,7 +14,7 @@
             <div class="box p-a">
                 <div class="box-header">
                     <h2>Today</h2>
-                    <small>Number of Hours Spent on Attending Service Request</small>
+                    <small>{{filters.durations.day.startedAt | date: settings.dateFormat}}</small>
                     <div class="box-tool">
                         <ul class="nav">
                             <li class="nav-item inline">
@@ -42,7 +42,10 @@
             <div class="box p-a">
                 <div class="box-header">
                     <h2>This Week</h2>
-                    <small>Number of Hours Spent on Attending Service Request</small>
+                    <small>
+                      {{filters.durations.week.startedAt | date: settings.dateFormat}}  -
+                      {{filters.durations.week.endedAt | date: settings.dateFormat}}
+                    </small>
                     <div class="box-tool">
                         <ul class="nav">
                             <li class="nav-item inline">
@@ -72,7 +75,10 @@
             <div class="box p-a">
                 <div class="box-header">
                     <h2>This Month</h2>
-                    <small>Number of Hours Spent on Attending Service Request</small>
+                    <small>
+                        {{filters.durations.month.startedAt | date: settings.dateFormat}}  -
+                        {{filters.durations.month.endedAt | date: settings.dateFormat}}
+                    </small>
                     <div class="box-tool">
                         <ul class="nav">
                             <li class="nav-item inline">
